Add new port graphics/lua-gd, to be maintained by Sergey V. Dyatko.
Lua-GD is a "binding": a library that exports gd functions to the Lua
Programming Language, allowing you to use gd from Lua.

PR:		177471
Submitted by:	Sergey V. Dyatko <sergey.dyatko@gmail.com>


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315572 35697150-7ecd-e111-bb59-0022644237b5

--- a/graphics/Makefile
+++ b/graphics/Makefile
@@ -555,6 +555,7 @@
     SUBDIR += linux_dri
     SUBDIR += linux_glide
     SUBDIR += lprof-devel
+    SUBDIR += lua-gd
     SUBDIR += luminance
     SUBDIR += luxrender
     SUBDIR += mahotas
