- trim header - change to new options framework for docs - change default tty to ttyu from ttyd - fix warning with retval while here - fix build on FreeBSD-10 - clean up tiny warning in xml code
git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315575 35697150-7ecd-e111-bb59-0022644237b5

--- a/comms/fldigi/Makefile
+++ b/comms/fldigi/Makefile
@@ -1,12 +1,8 @@
-# New ports collection makefile for:	fldigi
-# Date created:				December 20 2006
-# Whom:					Diane Bruce <db@db.net>
-#
 # $FreeBSD$
-#
 
 PORTNAME=	fldigi
 PORTVERSION=	3.21.59
+PORTREVISION=	1
 CATEGORIES=	comms hamradio
 MASTER_SITES=	http://www.w1hkj.com/downloads/fldigi/\
 		${MASTER_SITE_LOCAL}
@@ -124,7 +120,7 @@ post-configure:
 	${RM} ${WRKSRC}/doc/*.1
 
 post-install:
-.if	!defined(NOPORTDOCS)
+.if ${PORT_OPTIONS:MDOCS}
 	@${ECHO} ""
 	${MKDIR} ${DOCSDIR}
 	@${INSTALL_DATA} ${WRKSRC}/README ${DOCSDIR}
