--- a/textproc/liblrdf/Makefile
+++ b/textproc/liblrdf/Makefile
@@ -22,11 +22,12 @@ AUTOMAKE_ARGS=	--add-missing
 GNU_CONFIGURE=	yes
 USE_PKGCONFIG=	build
 USE_ICONV=	yes
-USES=        pathfix
+USES=		pathfix
 USE_GNOME=	libxml2 libxslt
 GNOME_MAKEFILEIN=	Makefile.am
 USE_LDCONFIG=	yes
 USE_OPENSSL=	yes
+PATHFIX_MAKEFILEIN=	Makefile.am
 
 CFLAGS+=	-I${OPENSSLINC} ${PTHREAD_CFLAGS}
 LDFLAGS+=	-L${OPENSSLLIB} ${PTHREAD_LIBS}
