- Fix and update COMMENT.
PR:		177453
Submitted by:	Kevin Zheng <kevinz5000@gmail.com>


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315579 35697150-7ecd-e111-bb59-0022644237b5

--- a/math/rocs/Makefile
+++ b/math/rocs/Makefile
@@ -8,7 +8,7 @@ MASTER_SITE_SUBDIR=	${KDE4_BRANCH}/${PORTVERSION}/src
 DIST_SUBDIR=	KDE/${PORTVERSION}
 
 MAINTAINER=	kde@FreeBSD.org
-COMMENT=	Graph teory IDE for KDE 4
+COMMENT=	KDE Graph theory IDE
 
 LIB_DEPENDS=	boost_thread:${PORTSDIR}/devel/boost-libs
 
