Mark BROKEN as I fix a reported regression
git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315582 35697150-7ecd-e111-bb59-0022644237b5

--- a/ports-mgmt/portmaster/Makefile
+++ b/ports-mgmt/portmaster/Makefile
@@ -20,6 +20,8 @@ GH_TAGNAME=	${GH_COMMIT}
 
 OPTIONS_DEFINE=	BASH ZSH
 
+BROKEN=		invokes pkgng bootstrapper when it should not
+
 PLIST_FILES=	sbin/portmaster etc/portmaster.rc.sample
 
 MAN8=		portmaster.8
