Produces ctags "tags" and etags "TAGS" files for Haskell programs.
WWW: http://hackage.haskell.org/package/hasktags

Obtained from:	FreeBSD Haskell


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315583 35697150-7ecd-e111-bb59-0022644237b5

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -739,6 +739,7 @@
     SUBDIR += hs-haskell-platform
     SUBDIR += hs-haskell-src
     SUBDIR += hs-haskell-src-exts
+    SUBDIR += hs-hasktags
     SUBDIR += hs-hastache
     SUBDIR += hs-hat
     SUBDIR += hs-hdoc
