- Update Calligra and l10n ports to 2.6.2:   * Japanese translation is stuck at 2.5.5;   * Southern Catalan translation is now up to date;   * Bosnian, Slovenian and Turkish translations were added.
This update brings several new features and the new Calligra Author;
for a full list, please read 2.6 release notes:
http://www.calligra.org/news/calligra-2-6-released


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315586 35697150-7ecd-e111-bb59-0022644237b5

--- a/editors/Makefile
+++ b/editors/Makefile
@@ -22,6 +22,7 @@
     SUBDIR += bvi
     SUBDIR += calligra
     SUBDIR += calligra-l10n
+    SUBDIR += calligra-l10n-bs
     SUBDIR += calligra-l10n-ca
     SUBDIR += calligra-l10n-ca_valencia
     SUBDIR += calligra-l10n-cs
@@ -38,7 +39,9 @@
     SUBDIR += calligra-l10n-nds
     SUBDIR += calligra-l10n-nl
     SUBDIR += calligra-l10n-sk
+    SUBDIR += calligra-l10n-sl
     SUBDIR += calligra-l10n-sv
+    SUBDIR += calligra-l10n-tr
     SUBDIR += chexedit
     SUBDIR += code-browser
     SUBDIR += codeeditor
