--- a/editors/calligra/Makefile
+++ b/editors/calligra/Makefile
@@ -2,7 +2,6 @@
 
 PORTNAME=	calligra
 PORTVERSION=	${CALLIGRA_VERSION}
-PORTREVISION=	2
 CATEGORIES=	editors kde
 MASTER_SITES=	${MASTER_SITE_KDE}
 MASTER_SITE_SUBDIR=	${CALLIGRA_BRANCH}/${PORTNAME}-${PORTVERSION}/
@@ -29,28 +28,27 @@ LIB_DEPENDS=	png15:${PORTSDIR}/graphics/png \
 		tiff:${PORTSDIR}/graphics/tiff \
 		gsl:${PORTSDIR}/math/gsl \
 		wps-0.2:${PORTSDIR}/textproc/libwps \
-		visio-0.0:${PORTSDIR}/textproc/libvisio
+		visio-0.0:${PORTSDIR}/textproc/libvisio \
+		OpenColorIO:${PORTSDIR}/graphics/opencolorio
 BUILD_DEPENDS=	${LOCALBASE}/libdata/pkgconfig/eigen2.pc:${PORTSDIR}/math/eigen2
 
 CONFLICTS=	koffice-kde4-2.*
-CONFLICTS_BUILD=	qt-3.*
+CONFLICTS_BUILD=qt-3.*
 
 USE_GL=		glew
 USE_GNOME=	glib20 libxml2 libxslt
 USE_ICONV=	yes
-USE_KDE4=	kdehier kdelibs kdeprefix libkdcraw okular pimlibs \
-		automoc4 sharedmime soprano
+USE_KDE4=	kactivities kdehier kdelibs kdeprefix libkdcraw nepomuk-core \
+		okular pimlibs attica automoc4 sharedmime soprano
 USE_PERL5=	yes
-USE_PKGCONFIG=	build
-USE_QT4=	dbus designer gui opengl phonon porting_build qt3support \
+USE_PKGCONFIG=	yes
+USE_QT4=	dbus designer_build gui opengl phonon porting_build qt3support \
 		qtestlib_build script sql svg webkit xml xmlpatterns \
 		moc_build qmake_build rcc_build uic_build uic3_build
 USE_SQLITE=	3
 USE_BZIP2=	yes
 USES=		cmake:outsource
-CMAKE_ARGS+=	-DCMAKE_INCLUDE_PATH:STRING="${QT_INCDIR} ${LOCALBASE}/include" \
-		-DBUILD_active:BOOL=FALSE \
-		-DBUILD_mobile:BOOL=FALSE \
+CMAKE_ARGS=	-DCMAKE_INCLUDE_PATH:STRING="${QT_INCDIR} ${LOCALBASE}/include" \
 		-DIHAVEPATCHEDQT:BOOL=TRUE # To be removed with Qt 4.8.2.
 MAKE_JOBS_SAFE=	yes
 USE_LDCONFIG=	yes
@@ -70,6 +68,13 @@ RUN_DEPENDS+=	${LOCALBASE}/lib/pstoedit/libp2edrvlplot.so:${PORTSDIR}/graphics/p
 PLIST_SUB+=	EPS=""
 .else
 PLIST_SUB+=	EPS="@comment "
+.endif
+
+.if defined(PACKAGE_BUILDING)
+# Requires Vc (http://code.compeng.uni-frankfurt.de/projects/vc).
+CMAKE_ARGS+=	-DWITH_PACKAGERS_BUILD:BOOL=TRUE
+.else
+CMAKE_ARGS+=	-DWITH_PACKAGERS_BUILD:BOOL=FALSE
 .endif
 
 .include <bsd.port.options.mk>
@@ -117,22 +122,23 @@ PLIST_SUB+=	SYBASE="@comment "
 .endif
 
 post-patch:
-	${REINPLACE_CMD} -e 's|/usr/X11R6|${LOCALBASE}|' \
+	@${REINPLACE_CMD} -e 's|/usr/X11R6|${LOCALBASE}|' \
 		${PATCH_WRKSRC}/cmake/modules/FindGLEW.cmake
-	${REINPLACE_CMD} -e 's|/opt/local|${LOCALBASE}|' \
+	@${REINPLACE_CMD} -e 's|/opt/local|${LOCALBASE}|' \
 		${PATCH_WRKSRC}/cmake/modules/FindImageMagick.cmake
-	${REINPLACE_CMD} -e 's|/usr/include|${LOCALBASE}/include|' \
+	@${REINPLACE_CMD} -e 's|/usr/include|${LOCALBASE}/include|' \
 		${PATCH_WRKSRC}/cmake/modules/FindWPD.cmake
-	${REINPLACE_CMD} -e 's/^# *include  *< *malloc\.h *>/#include <stdlib.h>/' \
-		${PATCH_WRKSRC}/kexi/kexidb/parser/sqlparser.cpp \
-		${PATCH_WRKSRC}/kexi/kexidb/parser/sqlparser.y \
+	@${REINPLACE_CMD} -e 's/^# *include  *< *malloc\.h *>/#include <stdlib.h>/' \
+		${PATCH_WRKSRC}/libs/db/parser/sqlparser.cpp \
+		${PATCH_WRKSRC}/libs/db/parser/sqlparser.y \
 		${PATCH_WRKSRC}/plan/plugins/schedulers/rcps/libs/src/*.c
-	# Prevent updating MIME during build/install.
-	${REINPLACE_CMD} -e '/^update_xdg_mimetypes/ d; /SharedMimeInfo/ d' \
+# They require memalign() to build; as they're not installed, they're just a
+# waste of CPU cycles.
+	@${REINPLACE_CMD} -e '/add_subdirectory.*benchmarks/ d' \
+		${PATCH_WRKSRC}/krita/CMakeLists.txt
+# Prevent updating MIME during build/install.
+	@${REINPLACE_CMD} -e '/^update_xdg_mimetypes/ d; /SharedMimeInfo/ d' \
 		${PATCH_WRKSRC}/filters/libmsooxml/CMakeLists.txt \
 		${PATCH_WRKSRC}/krita/plugins/formats/ora/CMakeLists.txt
-
-post-install:
-	@-update-mime-database ${PREFIX}/share/mime
 
 .include <bsd.port.mk>
