Create a soft link in order to fix compilation for build environments where the source is on a different filesystem.
git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315588 35697150-7ecd-e111-bb59-0022644237b5

--- a/dns/dnswall/Makefile
+++ b/dns/dnswall/Makefile
@@ -39,7 +39,7 @@ post-patch:
 pre-configure:
 .for f in ${AUTOFILES}
 	@${RM} ${WRKSRC}/${f}
-	@${LN} ${AUTOMAKE_DIR}/${f} ${WRKSRC}/${f}
+	@${LN} -s ${AUTOMAKE_DIR}/${f} ${WRKSRC}/${f}
 .endfor
 
 .include <bsd.port.mk>
