--- a/databases/firebird21-server/Makefile
+++ b/databases/firebird21-server/Makefile
@@ -67,6 +67,8 @@ SUB_FILES=	pkg-message aliases.conf
 UTIL_BIN=	fb_inet_server fb_lock_print fbstat gbak gdef gfix gsec nbackup
 UDF_SO=		ib_udf.so fbudf.so
 UDF_SQL=	src/extlib/ib_udf2.sql src/extlib/fbudf/fbudf.sql
+
+PKGINSTALL?=	${PKGDIR}/pkg-install${PKGNAMESUFFIX}
 .else
 # Client part stuff
 AUTOGENARGS=	--without-editline
@@ -122,7 +124,7 @@ post-install:
 
 .ifndef WITHOUT_IPC_CLEANUP
 pre-build:
-.ifndef PACKAGE_BUILDING
+.if !defined(CLIENT_ONLY)
 	@${SETENV} PKG_PREFIX="${PREFIX}" ${SH} ${PKGINSTALL} ${PORTNAME} PRE-INSTALL
 .endif
 	${MAKE} -C ${WRKSRC}/extern/btyacc
