--- a/databases/py-firebirdsql/Makefile
+++ b/databases/py-firebirdsql/Makefile
@@ -3,6 +3,7 @@
 
 PORTNAME=	firebirdsql
 PORTVERSION=	0.7.2
+PORTREVISION=	1
 CATEGORIES=	databases python
 MASTER_SITES=	CHEESESHOP
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
