- Correct the OptionsNG
PR:		177489
Submitted by:	John Marino <draco@marino.st>


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315597 35697150-7ecd-e111-bb59-0022644237b5

--- a/www/trac/Makefile
+++ b/www/trac/Makefile
@@ -35,11 +35,11 @@ SUB_LIST=	PYTHON_CMD=${PYTHON_CMD}
 
 .include <bsd.port.options.mk>
 
-.if ${PORT_OPTIONS:MSILVERCITY)
+.if ${PORT_OPTIONS:MSILVERCITY}
 RUN_DEPENDS+=	${LOCALBASE}/bin/source2html.py:${PORTSDIR}/textproc/silvercity
 .endif
 
-.if ${PORT_OPTIONS:MDOCUTILS)
+.if ${PORT_OPTIONS:MDOCUTILS}
 RUN_DEPENDS+=	${LOCALBASE}/bin/rst2html:${PORTSDIR}/textproc/py-docutils
 .endif
 
