GNU Emacs updates
editors/emacs:
 - Update to 24.3
 - Update CANNA patchset[1]
 - Unbreak ARM support by using the patch from emacs-devel port
 - Add missing INSTALLS_ICONS[2]
 - Remove a patch which is already integrated upstream
 - Fix Makefile header

editors/emacs-devel:
 - Update to bzr revision 112178
 - Fix Makefile header
 - Add missing INSTALLS_ICONS[2]

editors/emacs23:
 - Remove ABI versions from LIB_DEPENDS
 - Fix Makefile header
 - Add missing INSTALLS_ICONS[2]

Mk/bsd.emacs.mk:
 - Update major version for editors/emacs port

*:
 - Bump PORTREVISION to chase Emacs updates

PR:		ports/177428[2]
Submitted by:	Yuji TAKANO[1] (via private email), bdrewery[2]


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315598 35697150-7ecd-e111-bb59-0022644237b5

--- a/editors/emacs-devel/Makefile
+++ b/editors/emacs-devel/Makefile
@@ -1,9 +1,5 @@
-# New ports collection makefile for:    emacs22
-# Date created:				April 12 2005
-# Whom:	      				Kenneth Vestergaard Schmidt <kvs@pil.dk>
-#
+# Created by: Kenneth Vestergaard Schmidt <kvs@pil.dk>
 # $FreeBSD$
-#
 
 PORTNAME=	emacs
 PORTVERSION=	${EMACS_VER}.${EMACS_REV}
@@ -27,7 +23,7 @@ CONFLICTS=	emacs-19.* emacs-21.* emacs-22.* emacs-23.* \
 		emacs-nox11-[0-9]*
 
 EMACS_VER=	24.3.50
-EMACS_REV=	111818
+EMACS_REV=	112178
 GNU_CONFIGURE=	yes
 USE_GMAKE=	yes
 USE_NCURSES=	yes
@@ -37,6 +33,7 @@ LDFLAGS+=	-L${LOCALBASE}/lib
 CONFIGURE_ARGS=	--localstatedir=/var
 WRKSRC=		${WRKDIR}/${PORTNAME}-${PORTVERSION}
 USE_AUTOTOOLS=	autoconf:env automake:env aclocal:env autoheader:env
+INSTALLS_ICONS=	yes
 
 EMACS_DIRS=	${DATADIR}/${EMACS_VER}/leim ${DATADIR}/${EMACS_VER}/lisp ${DATADIR}/${EMACS_VER}/src \
 		${PREFIX}/libexec/${PORTNAME}
