--- a/devel/magit/Makefile
+++ b/devel/magit/Makefile
@@ -2,6 +2,7 @@
 
 PORTNAME=	magit
 PORTVERSION=	1.2.0
+PORTREVISION=	1
 CATEGORIES=	devel elisp
 MASTER_SITES=	${MASTER_SITE_LOCAL} \
 		http://cloud.github.com/downloads/magit/magit/
