--- a/editors/emacs-devel/files/patch-configure.ac
+++ b/editors/emacs-devel/files/patch-configure.ac
@@ -3,7 +3,7 @@ $FreeBSD$
 
 --- configure.ac.orig
 +++ configure.ac
-@@ -1240,39 +1240,10 @@
+@@ -1150,39 +1150,10 @@
    AC_CHECK_LIB(ossaudio, _oss_ioctl, LIBSOUND=-lossaudio, LIBSOUND=)
    AC_SUBST(LIBSOUND)
  
@@ -44,10 +44,10 @@ $FreeBSD$
       case "$opsys" in
         dnl defined __FreeBSD__ || defined __NetBSD__ || defined __linux__
         gnu-linux|freebsd|netbsd)
-@@ -1289,7 +1260,7 @@
+@@ -1199,7 +1170,7 @@
    linux/version.h sys/systeminfo.h
    coff.h pty.h
-   sys/vlimit.h sys/resource.h
+   sys/resource.h
 -  sys/utsname.h pwd.h utmp.h util.h)
 +  sys/utsname.h pwd.h utmp.h util.h libutil.h)
  
