--- a/editors/emacs/Makefile
+++ b/editors/emacs/Makefile
@@ -1,13 +1,8 @@
-# New ports collection makefile for:	GNU emacs
-# Date created:		11 October 2001
-# Whom:			MANTANI Nobutaka <nobutaka@nobutaka.com>
-#
+# Created by: MANTANI Nobutaka <nobutaka@nobutaka.com>
 # $FreeBSD$
-#
 
 PORTNAME=	emacs
 PORTVERSION=	${EMACS_VER}
-PORTREVISION?=	1
 PORTEPOCH=	3
 CATEGORIES=	editors ipv6
 MASTER_SITES=	${MASTER_SITE_GNU}
@@ -25,7 +20,7 @@ CONFLICTS=	emacs-19.* emacs-21.* emacs-22.* emacs-23.* \
 		xemacs-[0-9]* xemacs-devel-[0-9]* \
 		xemacs-mule-[0-9]* xemacs-devel-mule-[0-9]*
 
-EMACS_VER=	24.2
+EMACS_VER=	24.3
 GNU_CONFIGURE=	yes
 USE_GMAKE=	yes
 USE_NCURSES=	yes
@@ -34,9 +29,10 @@ CPPFLAGS+=	-I${LOCALBASE}/include
 LDFLAGS+=	-L${LOCALBASE}/lib
 CONFIGURE_ARGS=	--localstatedir=/var
 WRKSRC=		${WRKDIR}/${PORTNAME}-${PORTVERSION}
+INSTALLS_ICONS=	yes
 
 MAN1=		ctags.1 ebrowse.1 emacs.1 emacsclient.1 etags.1 \
-		grep-changelog.1 rcs-checkin.1
+		grep-changelog.1
 MANCOMPRESSED=	yes
 PLIST_SUB=	EMACS_VER=${EMACS_VER}
 
@@ -45,12 +41,12 @@ EMACS_DIRS=	${DATADIR}/${EMACS_VER}/leim ${DATADIR}/${EMACS_VER}/lisp ${DATADIR}
 
 MAKE_ENV=	LC_ALL=C
 
-INFO=		ada-mode auth autotype calc ccmode cl dbus dired-x \
+INFO=		ada-mode auth autotype bovine calc ccmode cl dbus dired-x \
 		ebrowse ede ediff edt efaq eieio eintr elisp emacs-mime emacs-gnutls emacs epa \
-		erc ert eshell eudc flymake forms gnus idlwave info \
+		erc ert eshell eudc flymake forms gnus htmlfontify idlwave info \
 		mairix-el message mh-e newsticker nxml-mode \
 		org pcl-cvs pgg rcirc reftex remember sasl sc semantic ses sieve \
-		smtpmail speedbar tramp url vip viper widget woman
+		smtpmail speedbar srecode tramp url vip viper widget wisent woman
 
 .if !defined(EMACS_NO_X11_SLAVE)
 CONFLICTS+=	emacs-nox11-[0-9]*
@@ -84,7 +80,7 @@ DBUS_PTHREAD_LIBS=	${CC} -dumpspecs | ${GREP} -m 1 pthread: | ${SED} -e 's|^.*%{
 .if ${PORT_OPTIONS:MCANNA}
 PATCH_SITES+=	http://distfiles.pirateparty.in/%SUBDIR%/ ${MASTER_SITE_LOCAL}
 PATCH_SITE_SUBDIR+=	ashish
-PATCHFILES+=	emacs24.1canna-20120614.diff.gz
+PATCHFILES+=	emacs24.3canna-20130321.diff.gz
 PATCH_DIST_STRIP=	-p1
 CONFIGURE_ARGS+=	--with-canna \
 			--with-canna-includes=${LOCALBASE}/include \
@@ -246,9 +242,7 @@ CONFIGURE_ARGS+=	--without-gnutls
 
 .include <bsd.port.pre.mk>
 
-.if ${ARCH} == "arm"
-BROKEN=	Emacs 24.X does not currently build on arm
-.elif ${ARCH} == "ia64"
+.if ${ARCH} == "ia64"
 BROKEN=	Emacs 24.X does not currently build on ia64
 .endif
 
