--- a/editors/emacs/files/patch-Makefile.in
+++ b/editors/emacs/files/patch-Makefile.in
@@ -3,41 +3,12 @@ $FreeBSD$
 
 --- Makefile.in.orig
 +++ Makefile.in
-@@ -518,14 +518,6 @@
- 
- install-arch-indep: mkdir info install-etc
- 	-set ${COPYDESTS} ; \
--	unset CDPATH; \
--	for dir in ${COPYDIR} ; do \
--	  if [ `(cd $$1 && /bin/pwd)` != `(cd $${dir} && /bin/pwd)` ] ; then \
--	    rm -rf $$1 ; \
--	  fi ; \
--	  shift ; \
--	done
--	-set ${COPYDESTS} ; \
- 	mkdir ${COPYDESTS} ; \
- 	chmod ugo+rx ${COPYDESTS} ; \
- 	unset CDPATH; \
-@@ -625,10 +617,10 @@
+@@ -610,7 +610,7 @@
  	   cd ${srcdir}/info ; \
- 	   for elt in $(INFO_FILES); do \
+ 	   for elt in ${INFO_NONMISC} $${info_misc}; do \
  	      test "$(HAVE_MAKEINFO)" = "no" && test ! -f $$elt && continue; \
 -	      for f in `ls $$elt $$elt-[1-9] $$elt-[1-9][0-9] 2>/dev/null`; do \
-+  	      for f in `ls $$elt 2>/dev/null`; do \
++   	      for f in `ls $$elt 2>/dev/null`; do \
  	       (cd $${thisdir}; \
--	        ${INSTALL_DATA} ${srcdir}/info/$$f $(DESTDIR)${infodir}/$$f); \
--	        chmod a+r $(DESTDIR)${infodir}/$$f; \
-+  	        ${INSTALL_DATA} ${srcdir}/info/$$f $(DESTDIR)${infodir}/$$f.info); \
-+  	        chmod a+r $(DESTDIR)${infodir}/$$f.info; \
- 	        if [ -n "${GZIP_INFO}" ] && [ -n "${GZIP_PROG}" ]; then \
- 	          rm -f $(DESTDIR)${infodir}/$$f.gz; \
- 	          ${GZIP_PROG} -9n $(DESTDIR)${infodir}/$$f; \
-@@ -643,7 +635,7 @@
- 	  for elt in $(INFO_FILES); do \
- 	    test "$(HAVE_MAKEINFO)" = "no" && test ! -f $$elt && continue; \
- 	    (cd $${thisdir}; \
--	     ${INSTALL_INFO} --info-dir=$(DESTDIR)${infodir} $(DESTDIR)${infodir}/$$elt); \
-+	     ${INSTALL_INFO} --info-dir=$(DESTDIR)${infodir} $(DESTDIR)${infodir}/$$elt.info); \
- 	  done; \
- 	else true; fi
- 	-chmod -R a+r $(DESTDIR)${datadir}/emacs/${version} ${COPYDESTS}
+ 	        ${INSTALL_DATA} ${srcdir}/info/$$f $(DESTDIR)${infodir}/$$f); \
+ 	        ( [ -n "${GZIP_INFO}" ] && [ -n "${GZIP_PROG}" ] ) || continue ; \
