--- a/japanese/ddskk/Makefile
+++ b/japanese/ddskk/Makefile
@@ -3,6 +3,7 @@
 
 PORTNAME=	ddskk
 PORTVERSION=	15.1
+PORTREVISION=	1
 CATEGORIES=	japanese elisp
 MASTER_SITES=	http://openlab.ring.gr.jp/skk/maintrunk/ \
 		ftp://ftp.ring.gr.jp/pub/elisp/skk/maintrunk/ \
