--- a/print/auctex/Makefile
+++ b/print/auctex/Makefile
@@ -3,6 +3,7 @@
 
 PORTNAME=	auctex
 PORTVERSION=	11.87
+PORTREVISION=	1
 CATEGORIES=	print elisp
 MASTER_SITES=	${MASTER_SITE_GNU}
 MASTER_SITE_SUBDIR=	${PORTNAME}
