--- a/textproc/markdown-mode.el/Makefile
+++ b/textproc/markdown-mode.el/Makefile
@@ -2,6 +2,7 @@
 
 PORTNAME=	markdown-mode.el
 PORTVERSION=	2.0
+PORTREVISION=	1
 CATEGORIES=	textproc
 MASTER_SITES=	http://jblevins.org/projects/markdown-mode/
 DISTNAME=	markdown-mode.el
