- Add more mirrors to fix build
Approved by:	maintainer (implicit)
Approved by:	portmgr
With hat:	portmgr


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315606 35697150-7ecd-e111-bb59-0022644237b5

--- a/ports-mgmt/dialog4ports/Makefile
+++ b/ports-mgmt/dialog4ports/Makefile
@@ -6,7 +6,11 @@ PORTVERSION=	0.1.3
 CATEGORIES=	ports-mgmt
 MASTER_SITES=	http://m1cro.tk/dialog4ports/ \
 		http://files.etoilebsd.net/dialog4ports/ \
-		ftp://invisible-island.net/dialog/:dialog
+		http://mirror.shatow.net/freebsd/${PORTNAME}/ \
+		http://m1cro.tk/dialog4ports/:dialog \
+		http://files.etoilebsd.net/dialog4ports/:dialog \
+		ftp://invisible-island.net/dialog/:dialog \
+		http://mirror.shatow.net/freebsd/${PORTNAME}/:dialog \
 
 MAINTAINER=	rum1cro@yandex.ru
 COMMENT=	Console Interface to configure ports
