- Broken checksum mismatch
git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315608 35697150-7ecd-e111-bb59-0022644237b5

--- a/textproc/rst.el/Makefile
+++ b/textproc/rst.el/Makefile
@@ -15,6 +15,8 @@ COMMENT=	ReStructuredText Support for Emacs
 
 USE_EMACS=	yes
 
+BROKEN=		checksum mismatch
+
 NO_WRKSUBDIR=	yes
 EXTRACT_CMD=	${CP}
 EXTRACT_BEFORE_ARGS=	# empty
