--- a/devel/tclap/Makefile
+++ b/devel/tclap/Makefile
@@ -2,6 +2,7 @@
 
 PORTNAME=	tclap
 PORTVERSION=	1.2.1
+PORTREVISION=	1
 CATEGORIES=	devel
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE}
 MASTER_SITE_SUBDIR=  ${PORTNAME:L}#
@@ -10,5 +11,6 @@ MAINTAINER=	grog@FreeBSD.org
 COMMENT=	Verbose replacement for getopt
 
 GNU_CONFIGURE=	yes
+USES=	pathfix
 
 .include <bsd.port.mk>
