- Mark BROKEN  checksum mismatch
Reported by:	pointyhat
Approved by:	portmgr


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315612 35697150-7ecd-e111-bb59-0022644237b5

--- a/science/checkmol/Makefile
+++ b/science/checkmol/Makefile
@@ -16,6 +16,8 @@ LICENSE=	GPLv2 # (or later)
 
 NO_WRKSUBDIR=	yes
 
+BROKEN=	checksum mismatch
+
 EXTRACT_CMD=	${CP}
 EXTRACT_BEFORE_ARGS=	#
 EXTRACT_AFTER_ARGS=	${WRKDIR}
