--- a/net/p5-Net-SMS-Mollie/Makefile
+++ b/net/p5-Net-SMS-Mollie/Makefile
@@ -2,6 +2,7 @@
 
 PORTNAME=	Net-SMS-Mollie
 PORTVERSION=	0.04
+PORTREVISION=	1
 CATEGORIES=	net
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
@@ -14,5 +15,7 @@ PERL_CONFIGURE=	yes
 BUILD_DEPENDS+= p5-ExtUtils-MakeMaker>=0:${PORTSDIR}/devel/p5-ExtUtils-MakeMaker
 RUN_DEPENDS+=	p5-Test-Simple>=0.44:${PORTSDIR}/devel/p5-Test-Simple \
 		p5-XML-Simple>=0:${PORTSDIR}/textproc/p5-XML-Simple
+
+MAN3=		Net::SMS::Mollie.3
 
 .include <bsd.port.mk>
