--- a/deskutils/parcellite/Makefile
+++ b/deskutils/parcellite/Makefile
@@ -3,6 +3,7 @@
 
 PORTNAME=	parcellite
 PORTVERSION=	1.0.1
+PORTREVISION=	1
 PORTEPOCH=	1
 CATEGORIES=	deskutils
 MASTER_SITES=	SF/${PORTNAME}/${PORTNAME}/${PORTNAME}-${PORTVERSION}
