- Mark Broken fails to build
touch .config
OMAKEFLAGS= OMAKEPATH=lib ./omake-boot --dotomake .omake --force-dotomake -j2 main
*** omake: reading OMakefiles
*** omake error:
File mk/defaults: line 124, characters 1-41
write(): Broken pipe
*** omake error:
File mk/defaults: line 124, characters 1-41
command exited with code: 123
* Error code 123

Reported by:	pointyhat
Approved by:	portmgr


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315617 35697150-7ecd-e111-bb59-0022644237b5

--- a/devel/omake/Makefile
+++ b/devel/omake/Makefile
@@ -24,6 +24,8 @@ INFO=		omake-doc
 
 .if ${ARCH} == "powerpc"
 BROKEN=		Does not build on powerpc
+.else
+BROKEN=	fails to build
 .endif
 
 post-patch:
