fix the build after FreeBSD src svn r248751
Reviewed by:	mandree
Approved by:	portmgr


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315619 35697150-7ecd-e111-bb59-0022644237b5

--- a/devel/libublio/Makefile
+++ b/devel/libublio/Makefile
@@ -18,7 +18,7 @@ PLIST_SUB+=	PROFLIB="@comment "
 PLIST_SUB+=	PROFLIB=""
 .endif
 
-SRCCONF=	${NONEXISTENT}
+SRCCONF=	/dev/null
 MAKE_ENV+=	SRCCONF=${SRCCONF}
 
 .include <bsd.port.options.mk>
