Make pkgconfig an explicit dependency of tshark.
git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315624 35697150-7ecd-e111-bb59-0022644237b5

--- a/net/wireshark/Makefile
+++ b/net/wireshark/Makefile
@@ -75,7 +75,7 @@ USE_GNOME+=	gtk20
 WIRESHARK_LIBS+=${PTHREAD_LIBS}
 .else
 PLIST_SUB+=	WIRESHARK="@comment wireshark not built"
-USE_GNOME+=	glib20
+USE_GNOME+=	glib20 pkgconfig
 CONFIGURE_ARGS+=	--enable-wireshark=no \
 			--disable-gtktest
 .endif
