--- a/net/wireshark/Makefile
+++ b/net/wireshark/Makefile
@@ -75,7 +75,8 @@ USE_GNOME+=	gtk20
 WIRESHARK_LIBS+=${PTHREAD_LIBS}
 .else
 PLIST_SUB+=	WIRESHARK="@comment wireshark not built"
-USE_GNOME+=	glib20 pkgconfig
+USE_GNOME+=	glib20
+USE_PKGCONFIG=	build
 CONFIGURE_ARGS+=	--enable-wireshark=no \
 			--disable-gtktest
 .endif
