- Mark Broken does not build
Reported by:	pointyhat
Approved by:	portmgr


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315629 35697150-7ecd-e111-bb59-0022644237b5

--- a/lang/pypy/Makefile
+++ b/lang/pypy/Makefile
@@ -17,6 +17,8 @@ LICENSE_COMB=	multi
 LIB_DEPENDS=	expat:${PORTSDIR}/textproc/expat2 \
 		ffi:${PORTSDIR}/devel/libffi
 
+BROKEN=		does not build
+
 CLI_DESC=	(BROKEN) Translate a CLI (.NET) based pypy
 JVM_DESC=	(BROKEN) Translate a JVM (Java) based pypy
 PYPY_DESC=	Use pypy to translate (faster but uses more memory)
