- Fix packaging by removing unneeded PACKAGE_BUILDING hack   from r295132 for ports/166867 that the maintainer did   not actually submit
Approved by:	portmgr
With hat:	portmgr


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315633 35697150-7ecd-e111-bb59-0022644237b5

--- a/math/proofgeneral/Makefile
+++ b/math/proofgeneral/Makefile
@@ -1,13 +1,9 @@
-# New ports collection makefile for:   proofgeneral
-# Date created:        11 August 2005
-# Whom:                Timothy Bourke <timbob@bigpond.com>
-#
+# Created by: Timothy Bourke <timbob@bigpond.com>
 # $FreeBSD$
-#
 
 PORTNAME=	proofgeneral
 PORTVERSION=	4.1
-PORTREVISION=	5
+PORTREVISION=	6
 CATEGORIES=	math elisp
 MASTER_SITES=	http://proofgeneral.inf.ed.ac.uk/releases/
 PKGNAMESUFFIX=	-${EMACS_NAME}
@@ -29,12 +25,6 @@ INSTALLS_ICONS=	yes
 USE_PERL5=	yes
 
 .include <bsd.port.pre.mk>
-
-.ifdef (PACKAGE_BUILDING)
-PLIST_SUB+=	PACKAGE_BUILDING="@comment "
-.else
-PLIST_SUB+=	PACKAGE_BUILDING=""
-.endif
 
 .if ${EMACS_NAME} == xemacs
 IGNORE=	the ProofGeneral developers no longer support XEmacs
