- Fix build with pkgtools
Approved by:	portmgr (miwi)


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315634 35697150-7ecd-e111-bb59-0022644237b5

--- a/lang/fsharp/Makefile
+++ b/lang/fsharp/Makefile
@@ -3,6 +3,7 @@
 
 PORTNAME=	fsharp
 PORTVERSION=	3.0.25
+PORTREVISION=	1
 CATEGORIES=	lang
 MASTER_SITES=	https://nodeload.github.com/fsharp/fsharp/tar.gz/ \
 		CRITICAL
@@ -20,6 +21,13 @@ USE_AUTOTOOLS=	autoconf
 USE_PKGCONFIG=	build
 
 WRKSRC=		${WRKDIR}/${PORTNAME}-${PORTVERSION}
+
+# This is currently a workaround for the differences between pkg_* and pkg(8).
+.if defined(WITH_PKGNG)
+PLIST_SUB+=	LB="${LOCALBASE}/"
+.else
+PLIST_SUB+=	LB=""
+.endif
 
 .include "${.CURDIR}/../../lang/mono/bsd.mono.mk"
 .include <bsd.port.mk>
