Fix make fetch.
http://www.ms-studio.com currently HTTP 301 redirects to
http://www.marksimonson.com, which seems to be the font author's current
website.

Point MASTER_SITES to the new domain.

Approved by:	portmgr (miwi)


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315635 35697150-7ecd-e111-bb59-0022644237b5

--- a/x11-fonts/anonymous-pro/Makefile
+++ b/x11-fonts/anonymous-pro/Makefile
@@ -8,7 +8,7 @@
 PORTNAME=	anonymous-pro
 PORTVERSION=	1.002
 CATEGORIES=	x11-fonts
-MASTER_SITES=	http://www.ms-studio.com/FontSales/
+MASTER_SITES=	http://www.marksimonson.com/assets/content/fonts/
 DISTNAME=	AnonymousPro-${PORTVERSION}
 
 MAINTAINER=	nlopes.ml@gmail.com
