pypy does not build on the pointhat configuration, but does build in other configurations.
Approved by:	portmgr (miwi)


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315639 35697150-7ecd-e111-bb59-0022644237b5

--- a/lang/pypy/Makefile
+++ b/lang/pypy/Makefile
@@ -17,8 +17,6 @@ LICENSE_COMB=	multi
 LIB_DEPENDS=	expat:${PORTSDIR}/textproc/expat2 \
 		ffi:${PORTSDIR}/devel/libffi
 
-BROKEN=		does not build
-
 CLI_DESC=	(BROKEN) Translate a CLI (.NET) based pypy
 JVM_DESC=	(BROKEN) Translate a JVM (Java) based pypy
 PYPY_DESC=	Use pypy to translate (faster but uses more memory)
@@ -30,6 +28,8 @@ LOCALBASE?=	/usr/local
 .if exists(${LOCALBASE}/bin/pypy)
 OPTIONS_DEFINE+=	PYPY
 .endif
+
+MANUAL_PACKAGE_BUILD=	runaway process on pointyhat
 
 ALL_TARGET=	${PYPY_NAMES}
 BUILD_WRKSRC=	${WRKDIR}
