- update japanes/bugzilla templates - update vuxml to reflect bugzilla templates - fix typo in vuxml
Approved by:	portmgr (miwi)
Sponsored by:


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315642 35697150-7ecd-e111-bb59-0022644237b5

--- a/japanese/bugzilla3/Makefile
+++ b/japanese/bugzilla3/Makefile
@@ -1,12 +1,12 @@
 # $FreeBSD$
 
 PORTNAME=	bugzilla
-PORTVERSION=	3.6.12
+PORTVERSION=	3.6.13
 CATEGORIES=	japanese
 MASTER_SITES=	http://bug-ja.org/releases/3.6/ \
 		LOCAL
 MASTER_SITE_SUBDIR=	tota/bugzilla-ja
-DISTNAME=	Bugzilla-ja-${PORTVERSION}-template
+DISTNAME=	Bugzilla-ja-${PORTVERSION}-template-rel01
 
 MAINTAINER=	bugzilla@FreeBSD.org
 COMMENT=	Japanese localization for Bugzilla
