Fix typo in OptionNG conversion, so option is usable again.
PR:		ports/177540
Submitted by:	Fredrik Nystrom <fredrik@lysator.liu.se>
Approved by:	portmgr (miwi)


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315649 35697150-7ecd-e111-bb59-0022644237b5

--- a/x11/gnome2/Makefile
+++ b/x11/gnome2/Makefile
@@ -63,7 +63,7 @@ USE_PYTHON=	yes
 .endif
 
 .if !defined(GNOME_SLAVE) || ${.CURDIR:T}=="gnome2-lite"
-OPTIONS_DEFINE=	XSCHEENSAVER
+OPTIONS_DEFINE=	XSCREENSAVER
 XSCREENSAVER_DESC=	Use xscreensaver as screen saver app
 #		MAPI "Depend on evolution-mapi (pulls in samba4)
 .endif
