Add back BROKEN message when WITH_NEW_XORG isn't set.
Submitted by:	pointyhat (via miwi)
Approved by:	portmgr (miwi), maintainer (timeout)


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315651 35697150-7ecd-e111-bb59-0022644237b5

--- a/multimedia/libva-intel-driver/Makefile
+++ b/multimedia/libva-intel-driver/Makefile
@@ -37,6 +37,8 @@ pre-configure:
 	@${ECHO} "${PKGNAME}: Rebuild graphics/libdrm with the WITH_KMS option."
 	@${FALSE}
 .endif
+.else
+BROKEN=	This port need libdrm version that is available when WITH_NEW_XORG is set
 .endif
 
 post-patch:	.SILENT
